--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-src_dir = examples/CAN
+src_dir = examples/VictronESP32
 ; src_dir = examples/Original_Test
 ; src_dir = examples/RS485_WS2812B
 ; src_dir = examples/SD
@@ -17,8 +17,14 @@ src_dir = examples/CAN
 ; src_dir = examples/WS2812B_Blink
 
 [env:ttgo-tcan485]
-platform = espressif32
+platform = espressif32@6.11.0
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
+
+lib_deps =
+  ArduinoJson
+  PubSubClient
+  TimeLib
+  StringSplitter
