Usage: LILYGO XY_32_CAN_RS485

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,15 +16,28 @@ src_dir = examples/VictronESP32
 ; src_dir = examples/SPIExample
 ; src_dir = examples/WS2812B_Blink
 
+[common]
+port = COM7
+
 [env:ttgo-tcan485]
 platform = espressif32@6.11.0
 board = esp32dev
 framework = arduino
+monitor_port = ${common.port}
 monitor_speed = 115200
+upload_port = ${common.port}
 board_build.partitions = huge_app.csv
+; Debugging
+build_flags = 
+  ;-DCORE_DEBUG_LEVEL=5    ; Verbose
+  -DCORE_DEBUG_LEVEL=3    ; Info
+  -DCONFIG_ESP_SYSTEM_GDBSTUB_ENABLED=1
+  -g3                     ; Debug-Informationen in ELF einfügen
+  -O0                     ; Optimierungen ausschalten
 
 lib_deps =
   ArduinoJson
   PubSubClient
   TimeLib
   StringSplitter
+
