Add config for OTA upload Rename USE_OTA to USE_V_OTA Improve VeDirect implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,15 +17,56 @@ src_dir = examples/VictronESP32
 ; src_dir = examples/WS2812B_Blink
 
 [common]
-port = COM7
+com_port = COM7
+ip_address = 192.168.1.42
+build_flags = 
+  ;-DCORE_DEBUG_LEVEL=5    ; Verbose
+  -DCORE_DEBUG_LEVEL=3    ; Info
+  -DCONFIG_ESP_SYSTEM_GDBSTUB_ENABLED=1
+  -g3                     ; Debug-Informationen in ELF einfügen
+  -O0                     ; Optimierungen ausschalten
+lib_deps =
+  ArduinoJson
+  PubSubClient
+  TimeLib
+  StringSplitter
+
+[env:serial]
+platform = espressif32@6.11.0
+board    = esp32dev
+framework= arduino
+
+upload_port = ${common.com_port}
+monitor_port = ${common.com_port}
+board_build.partitions = huge_app.csv
+build_flags = ${common.build_flags}
+lib_deps = ${common.lib_deps}
+
+[env:wifi]
+platform = espressif32@6.11.0
+board = esp32dev
+framework= arduino
+
+upload_protocol = espota
+upload_port = ${common.ip_address}
+upload_flags = --port=3232
+monitor_port = ${common.ip_address}:23
+board_build.partitions = huge_app.csv
+build_flags = ${common.build_flags}
+lib_deps = ${common.lib_deps}
 
 [env:ttgo-tcan485]
 platform = espressif32@6.11.0
 board = esp32dev
 framework = arduino
-monitor_port = ${common.port}
+monitor_port = ${common.com_port}
+; monitor_port = 192.168.1.42:23
 monitor_speed = 115200
-upload_port = ${common.port}
+upload_port = ${common.com_port}
+; upload_port = 192.168.1.42   ; IP deines ESP32 im WLAN
+; upload_flags =
+;   --auth=yourPassword       ; Passwort für OTA (optional)
+;   --port=3232               ; Standardport für OTA
 board_build.partitions = huge_app.csv
 ; Debugging
 build_flags = 
@@ -40,4 +81,3 @@ lib_deps =
   PubSubClient
   TimeLib
   StringSplitter
-
